--- a/ContactsApp-URLSession/ContactsApp/Main.storyboard
+++ b/ContactsApp-URLSession/ContactsApp/Main.storyboard
@@ -93,27 +93,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NIU-bQ-Dco">
-                                <rect key="frame" x="78" y="171" width="259" height="77"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NIU-bQ-Dco">
+                                <rect key="frame" x="78" y="171" width="259" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="77" id="RL5-f1-ph4"/>
+                                    <constraint firstAttribute="height" constant="70" id="t6T-WR-Gpx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Phone Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TRa-q0-MdS">
-                                <rect key="frame" x="78" y="306" width="259" height="77"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Phone Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TRa-q0-MdS">
+                                <rect key="frame" x="78" y="342.5" width="259" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="77" id="T7W-hI-IKP"/>
+                                    <constraint firstAttribute="height" constant="70" id="lhD-7w-Zjd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzi-hE-GDQ">
-                                <rect key="frame" x="133" y="499" width="149" height="77"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="77" id="eQM-Nb-rpk"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzi-hE-GDQ">
+                                <rect key="frame" x="179.5" y="499" width="55.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Save"/>
                                 <connections>
@@ -124,15 +121,14 @@
                         <viewLayoutGuide key="safeArea" id="HCK-t5-r3X"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="TRa-q0-MdS" firstAttribute="top" secondItem="NIU-bQ-Dco" secondAttribute="bottom" constant="58" id="AXE-I3-Yod"/>
-                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="leading" secondItem="HCK-t5-r3X" secondAttribute="leading" constant="78" id="Gqt-I4-2AE"/>
-                            <constraint firstItem="gzi-hE-GDQ" firstAttribute="leading" secondItem="HCK-t5-r3X" secondAttribute="leading" constant="133" id="Hae-lh-7uy"/>
-                            <constraint firstItem="HCK-t5-r3X" firstAttribute="bottom" secondItem="gzi-hE-GDQ" secondAttribute="bottom" constant="286" id="HlS-75-tYO"/>
-                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="centerX" secondItem="HVS-4W-2np" secondAttribute="centerX" id="Vuh-6D-fhg"/>
-                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="top" secondItem="HCK-t5-r3X" secondAttribute="top" constant="83" id="XYn-gQ-Ihy"/>
-                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="trailing" secondItem="TRa-q0-MdS" secondAttribute="trailing" id="c3d-GM-GcT"/>
-                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="leading" secondItem="TRa-q0-MdS" secondAttribute="leading" id="o5i-1t-Wnw"/>
-                            <constraint firstItem="TRa-q0-MdS" firstAttribute="centerX" secondItem="gzi-hE-GDQ" secondAttribute="centerX" id="vBE-QG-msN"/>
+                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="top" secondItem="HCK-t5-r3X" secondAttribute="top" constant="83" id="BCe-c5-VUz"/>
+                            <constraint firstItem="HCK-t5-r3X" firstAttribute="trailing" secondItem="NIU-bQ-Dco" secondAttribute="trailing" constant="77" id="Pgy-XT-glD"/>
+                            <constraint firstItem="gzi-hE-GDQ" firstAttribute="centerX" secondItem="HVS-4W-2np" secondAttribute="centerX" id="jcJ-Gm-keB"/>
+                            <constraint firstItem="gzi-hE-GDQ" firstAttribute="top" secondItem="TRa-q0-MdS" secondAttribute="bottom" constant="86.5" id="jvB-rd-jIe"/>
+                            <constraint firstItem="HCK-t5-r3X" firstAttribute="trailing" secondItem="TRa-q0-MdS" secondAttribute="trailing" constant="77" id="mXH-0Y-6Os"/>
+                            <constraint firstItem="NIU-bQ-Dco" firstAttribute="leading" secondItem="HCK-t5-r3X" secondAttribute="leading" constant="78" id="wcU-p1-2Je"/>
+                            <constraint firstItem="TRa-q0-MdS" firstAttribute="leading" secondItem="HCK-t5-r3X" secondAttribute="leading" constant="78" id="ywK-6S-sys"/>
+                            <constraint firstItem="TRa-q0-MdS" firstAttribute="top" secondItem="NIU-bQ-Dco" secondAttribute="bottom" constant="101.5" id="zR7-Ir-QZZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Kişi Ekle" id="zXR-Lh-Ff0"/>
@@ -154,18 +150,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDr-OS-rkr">
-                                <rect key="frame" x="100" y="180" width="214" height="52"/>
+                                <rect key="frame" x="100" y="180" width="214" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="52" id="xOd-ky-sLs"/>
+                                    <constraint firstAttribute="height" constant="70" id="5Pg-Am-Xu3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0h-Qu-155">
-                                <rect key="frame" x="100" y="339" width="214" height="52"/>
+                                <rect key="frame" x="100" y="339" width="214" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="52" id="TR2-m2-cnB"/>
+                                    <constraint firstAttribute="height" constant="70" id="QSl-r4-nWc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
@@ -175,12 +171,12 @@
                         <viewLayoutGuide key="safeArea" id="hb9-7k-eCd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="DDr-OS-rkr" firstAttribute="trailing" secondItem="m0h-Qu-155" secondAttribute="trailing" id="2tr-Vz-5wn"/>
-                            <constraint firstItem="DDr-OS-rkr" firstAttribute="leading" secondItem="hb9-7k-eCd" secondAttribute="leading" constant="100" id="6j0-oS-hX2"/>
-                            <constraint firstItem="DDr-OS-rkr" firstAttribute="centerX" secondItem="KpY-bv-b53" secondAttribute="centerX" id="Rs3-CZ-LNA"/>
-                            <constraint firstItem="DDr-OS-rkr" firstAttribute="top" secondItem="hb9-7k-eCd" secondAttribute="top" constant="92" id="ddy-ao-ypr"/>
-                            <constraint firstItem="DDr-OS-rkr" firstAttribute="leading" secondItem="m0h-Qu-155" secondAttribute="leading" id="e4l-dX-cIR"/>
-                            <constraint firstItem="hb9-7k-eCd" firstAttribute="bottom" secondItem="m0h-Qu-155" secondAttribute="bottom" constant="471" id="kfd-m9-5FX"/>
+                            <constraint firstItem="hb9-7k-eCd" firstAttribute="trailing" secondItem="DDr-OS-rkr" secondAttribute="trailing" constant="100" id="E78-j7-wbn"/>
+                            <constraint firstItem="m0h-Qu-155" firstAttribute="leading" secondItem="hb9-7k-eCd" secondAttribute="leading" constant="100" id="NG2-Pv-F04"/>
+                            <constraint firstItem="m0h-Qu-155" firstAttribute="top" secondItem="DDr-OS-rkr" secondAttribute="bottom" constant="89" id="NqS-S2-NmF"/>
+                            <constraint firstItem="DDr-OS-rkr" firstAttribute="leading" secondItem="hb9-7k-eCd" secondAttribute="leading" constant="100" id="Y5A-gX-Kpa"/>
+                            <constraint firstItem="DDr-OS-rkr" firstAttribute="top" secondItem="hb9-7k-eCd" secondAttribute="top" constant="92" id="Y9f-pM-Vk6"/>
+                            <constraint firstItem="hb9-7k-eCd" firstAttribute="trailing" secondItem="m0h-Qu-155" secondAttribute="trailing" constant="100" id="mph-in-tcG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Kişi Detay" id="OWf-w3-7JX"/>
@@ -201,27 +197,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nfr-id-M6r">
-                                <rect key="frame" x="77" y="195" width="259" height="77"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nfr-id-M6r">
+                                <rect key="frame" x="77" y="195" width="259" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="77" id="BeE-lI-scY"/>
+                                    <constraint firstAttribute="height" constant="70" id="1z1-CD-6Nh"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Phone Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p71-jV-PuN">
-                                <rect key="frame" x="77" y="330" width="259" height="77"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Contact Phone Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p71-jV-PuN">
+                                <rect key="frame" x="77" y="323" width="259" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="77" id="QhV-5m-XEX"/>
+                                    <constraint firstAttribute="height" constant="70" id="Kqg-tI-jK4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppa-kM-N1B">
-                                <rect key="frame" x="132" y="523" width="149" height="77"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="77" id="cWT-7M-vXI"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppa-kM-N1B">
+                                <rect key="frame" x="171.5" y="523" width="71.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Update"/>
                                 <connections>
@@ -232,15 +225,14 @@
                         <viewLayoutGuide key="safeArea" id="2F8-2I-42u"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Nfr-id-M6r" firstAttribute="leading" secondItem="p71-jV-PuN" secondAttribute="leading" id="3vX-3n-BbB"/>
-                            <constraint firstItem="Nfr-id-M6r" firstAttribute="trailing" secondItem="p71-jV-PuN" secondAttribute="trailing" id="BlL-2o-JHL"/>
-                            <constraint firstItem="Nfr-id-M6r" firstAttribute="leading" secondItem="2F8-2I-42u" secondAttribute="leading" constant="77" id="EJr-tf-c1o"/>
-                            <constraint firstItem="Nfr-id-M6r" firstAttribute="top" secondItem="2F8-2I-42u" secondAttribute="top" constant="107" id="JdX-qr-mJT"/>
-                            <constraint firstItem="2F8-2I-42u" firstAttribute="bottom" secondItem="Ppa-kM-N1B" secondAttribute="bottom" constant="262" id="LUN-gp-jXT"/>
-                            <constraint firstItem="Ppa-kM-N1B" firstAttribute="leading" secondItem="2F8-2I-42u" secondAttribute="leading" constant="132" id="Z3z-55-f1B"/>
-                            <constraint firstItem="p71-jV-PuN" firstAttribute="top" secondItem="Nfr-id-M6r" secondAttribute="bottom" constant="58" id="fpv-fR-GQm"/>
-                            <constraint firstItem="p71-jV-PuN" firstAttribute="centerX" secondItem="Ppa-kM-N1B" secondAttribute="centerX" id="hQ9-D4-kQY"/>
-                            <constraint firstItem="Nfr-id-M6r" firstAttribute="centerX" secondItem="UQ2-n0-ErL" secondAttribute="centerX" id="rhQ-lc-hUy"/>
+                            <constraint firstItem="Ppa-kM-N1B" firstAttribute="top" secondItem="p71-jV-PuN" secondAttribute="bottom" constant="130" id="3ZO-kh-6XS"/>
+                            <constraint firstItem="2F8-2I-42u" firstAttribute="trailing" secondItem="Nfr-id-M6r" secondAttribute="trailing" constant="78" id="GbX-zz-zR7"/>
+                            <constraint firstItem="Ppa-kM-N1B" firstAttribute="centerX" secondItem="UQ2-n0-ErL" secondAttribute="centerX" id="HyR-lM-9Vs"/>
+                            <constraint firstItem="2F8-2I-42u" firstAttribute="trailing" secondItem="p71-jV-PuN" secondAttribute="trailing" constant="78" id="MRZ-zp-uI5"/>
+                            <constraint firstItem="Nfr-id-M6r" firstAttribute="leading" secondItem="2F8-2I-42u" secondAttribute="leading" constant="77" id="dcL-s5-SjI"/>
+                            <constraint firstItem="Nfr-id-M6r" firstAttribute="top" secondItem="2F8-2I-42u" secondAttribute="top" constant="107" id="i2U-uc-YvZ"/>
+                            <constraint firstItem="p71-jV-PuN" firstAttribute="top" secondItem="Nfr-id-M6r" secondAttribute="bottom" constant="58" id="v19-Bb-MFm"/>
+                            <constraint firstItem="p71-jV-PuN" firstAttribute="leading" secondItem="2F8-2I-42u" secondAttribute="leading" constant="77" id="yww-tZ-0ek"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Kişi Güncelle" id="OLM-S4-vGf"/>
